# NCAR-GLOW

./: .gitignore  MANIFEST.in  README.md  cglow_vars.f90  conversion.py  iri90.c  meson.build  nrlmsise00.c  setup.cfg  test.py
Examples/: Maxwellian.py  Monoenergetic.py  NoSourceTest.py
Notebooks/: Maxwellian.ipynb
src/GLOW/: bands.f90  cglow_init.f90  egrid.f90  ephoto.f90  ephoto_init.f90  etrans.f90  exsect.f  gchem.f90  glow.f90  iri90.f  msis_wrap.f90  rout.f90  snoem.f90  snoem_init.f90  snoemint.f90  ssflux.f90  ssflux_init.f90
src/glowpython/: __init__.py  base.py  dirsetup.py  iri90.py  msis2k.py  snoem.py  utils.py
src/glowpython/tests/: test_basic.py
src/ncarglow/: __init__.py  base.py  meson.build
