[metadata]
name = ncarglow
version = attr:ncarglow.__version__
author = Michael Hirsch, Ph.D., Sunip K. Mukherjee
description = NCAR GLOW model
url = https://github.com/sunipkm/ncar-glow
keywords =
  thermosphere
  ionosphere
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
include_package_data = True
packages = find:
zip_safe = False
install_requires =
  numpy >= 1.10
  xarray
  geomagindices @ git+https://github.com/sunipkm/geomagindices
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest >= 3.9
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
plot =
  matplotlib
  seaborn
